force-app/main/default/objects/Account/fields/test_for_status__c.field-meta.xml
<CustomField>
    <fullName>test_for_status__c</fullName>
    <label>test_for_status</label>
    <type>AutoNumber</type>
</CustomField>