force-app/main/default/objects/Account/fields/test_recommit_recreate_featurebranch1__c.field-meta.xml
<CustomField>
    <fullName>test_recommit_recreate_featurebranch1__c</fullName>
    <label>test recommit recreate featurebranch1</label>
    <type>AutoNumber</type>
</CustomField>